--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Jonatan's portfolio</h1>
-    <h2>Junior Web Developer</h2>
+    <h2>Web Developer in training</h2>
     <hr />
     <h2>My previous projects:</h2>
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
